--- a/css/styles.css
+++ b/css/styles.css
@@ -492,7 +492,9 @@ img {
   padding: 12px 24px;
   border: transparent;
   border-radius: 4px;
-  transition: background-color var(--trans), color var(--trans), box-shado var(--trans);
+  transition: background-color var(--trans),
+   color var(--trans), 
+   box-shadow var(--trans);
 }
 .item-button:not(:last-child) {
   margin-right: 24px;
@@ -579,7 +581,7 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-  transition: opasity var(--trans),
+  transition: opacity var(--trans),
   visibility var(--trans);
 }
 
